大规模图下钻

--- a/examples/64-大规模图下钻式探索/64-大规模图下钻式探索-1.html
+++ b/examples/64-大规模图下钻式探索/64-大规模图下钻式探索-1.html
@@ -10,6 +10,13 @@
             margin: 0;
             padding: 0;
         }
+
+        html, body {
+            height: 100%;
+        }
+        #container {
+            height: 100%;
+        }
         .g6-component-contextmenu {
             position: absolute;
             z-index: 2;
